--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/0517214148.js" crossorigin="anonymous"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link rel="stylesheet" href="app.css">
+        <title>TV-Maze project </title>
+    </head>
 
-    <!-- <link rel="stylesheet" href="app.css"> -->
-    <title>TV-Maze project </title>
+    <body class="bg-dark">
+        <div class="searchBar h-100 d-flex align-items-center justify-content-center">
+            <form class="searchForm" id="searchForm">
+                <h1 class="text-white">TV Show Finder</h1>
+                <div class="input-group mb-5">
+                    <input type="text" class="form-control bg-dark text-white" placeholder="Search" id="searchTerm">
+                    <button class="btn btn-outline-light" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+            </form>
+        </div>
 
-</head>
+        <div class="container" id="movieContainer">
+            <div class="row"></div>
+        </div>
 
-<body>
-
-    <div class="searchBar h-100 d-flex align-items-center justify-content-center">
-        <form class="searchForm" id="searchForm">
-            <h1>TV Show Search</h1>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search" id="searchTerm">
-                <button class="btn btn-outline-secondary" type="submit"><i
-                        class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-        </form>
-    </div>
-
-    <div class="container" id="movieContainer">
-        <div class="row"></div>
-    </div>
-
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-    <script src="app.js"></script>
-</body>
+        <!-- Scripts -->
+        <script src="https://kit.fontawesome.com/0517214148.js" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+        <script src="app.js"></script>
+    </body>
 
 </html>
